# marvin

./: .gitmodules  LICENSE  README.md  camera.py  pyproject.toml  requirements.txt
assets/: tensorflow_app.js
emotion_db/: Adam Lindsay Gordon.json.emo  Alan Seeger.json.emo  Ambrose Bierce.json.emo  Amy Levy.json.emo  Anne Bradstreet.json.emo  Anne Bronte.json.emo  Anne Killigrew.json.emo  Anne Kingsmill Finch.json.emo  Annie Louisa Walker.json.emo  Charles Kingsley.json.emo  Charles Sorley.json.emo  Charlotte Bronte.json.emo  Christina Rossetti.json.emo  Christopher Marlowe.json.emo  Christopher Smart.json.emo  Edgar Allan Poe.json.emo  Edward Fitzgerald.json.emo  Edward Lear.json.emo  Edward Taylor.json.emo  Eliza Cook.json.emo  Ernest Dowson.json.emo  Eugene Field.json.emo  George Herbert.json.emo  George Meredith.json.emo  Gerard Manley Hopkins.json.emo  Helen Hunt Jackson.json.emo  Henry Vaughan.json.emo  Henry Wadsworth Longfellow.json.emo  Isaac Watts.json.emo  James Henry Leigh Hunt.json.emo  James Thomson.json.emo  Jane Austen.json.emo  John Dryden.json.emo  John Greenleaf Whittier.json.emo  John Keats.json.emo  John Trumbull.json.emo  Jonathan Swift.json.emo  Joseph Warton.json.emo  Joyce Kilmer.json.emo  Julia Ward Howe.json.emo  (+30 more)
frontend/: index.html
modules/: __init__.py  secrets.py  tone_analyzer.py  tone_downloader.py
poets/: Adam Lindsay Gordon.json  Alan Seeger.json  Algernon Charles Swinburne.json  Ann Taylor.json  Anne Bronte.json  Arthur Hugh Clough.json  Ben Jonson.json  Charles Kingsley.json  Charles Sorley.json  Charlotte Bronte.json  (+54 more)
(+124 files in other folders)
